# toishi

./: README.md  pyproject.toml  test_toishi.py  toishi.py
.github/workflows/: python-ci.yml
