[tool.poetry]
name = "toishi"
version = "0.1.0"
description = "日本の伝統的な刃物の研ぎに使用される砥石をモチーフにしている。テキストを鋭く整形するツール"
authors = ["Tatsuya Matoba <tatsuya.matoba.wk.jp@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
